페이스북 인증 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SNSAccountTest</string>
     <string name="kakao_app_key">e40ff9dcd71bd7016b30639019719b1b</string>
-    <string name="google_server_client_id">496128070682-1qlaan6q90198up1i1un82nbtbpjsk2j.apps.googleusercontent.com</string>
+    <string name="google_client_id">496128070682-1qlaan6q90198up1i1un82nbtbpjsk2j.apps.googleusercontent.com</string>
+    <string name="facebook_app_id">152489821789246</string>
 </resources>
