--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="kakao_app_key">e40ff9dcd71bd7016b30639019719b1b</string>
     <string name="google_client_id">496128070682-1qlaan6q90198up1i1un82nbtbpjsk2j.apps.googleusercontent.com</string>
     <string name="facebook_app_id">152489821789246</string>
+    <string name="crash_toast_text">앱이 죽었다!</string>
 </resources>
